--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(pico_color_picker
   ws281x.c
   ssd1306.c
   pico_ft2.c
+  hid.c
 )
 
 pico_generate_pio_header(pico_color_picker
@@ -47,14 +48,16 @@ target_compile_definitions(pico_color_picker PRIVATE
   PICO_WS2813B_PIN=3
   WS2812_PIXEL_COUNT=3
   WS2813B_PIXEL_COUNT=14
-  DEBUG=1
+  ROTARY_ENCODER_PIO=1
+  ROTARY_ENCODER_RED_SM=0
+  ROTARY_ENCODER_RED_A_PIN=15
+  ROTARY_ENCODER_RED_B_PIN=14
   )
 
 target_include_directories(pico_color_picker PUBLIC
-  ${CMAKE_CURRENT_SOURCE_DIR}/freetype/include
+  ${CMAKE_SOURCE_DIR}/freetype/include
   )
 
-#    target_compile_options(pico_color_picker PRIVATE -Werror)
 target_link_libraries(pico_color_picker PRIVATE
   pico_stdlib
   pico_binary_info
@@ -67,57 +70,3 @@ target_link_libraries(pico_color_picker PRIVATE
   )
 
 pico_add_extra_outputs(pico_color_picker)
-
-add_library(freetype OBJECT
-  freetype/src/autofit/autofit.c
-  freetype/src/base/ftbase.c
-  freetype/src/base/ftbbox.c
-  freetype/src/base/ftbdf.c
-  freetype/src/base/ftbitmap.c
-  freetype/src/base/ftcid.c
-  freetype/src/base/ftfstype.c
-  freetype/src/base/ftgasp.c
-  freetype/src/base/ftglyph.c
-  freetype/src/base/ftgxval.c
-  freetype/src/base/ftinit.c
-  freetype/src/base/ftmm.c
-  freetype/src/base/ftotval.c
-  freetype/src/base/ftpatent.c
-  freetype/src/base/ftpfr.c
-  freetype/src/base/ftstroke.c
-  freetype/src/base/ftsynth.c
-  freetype/src/base/fttype1.c
-  freetype/src/base/ftwinfnt.c
-  freetype/src/bdf/bdf.c
-  freetype/src/bzip2/ftbzip2.c
-  freetype/src/cache/ftcache.c
-  freetype/src/cff/cff.c
-  freetype/src/cid/type1cid.c
-  freetype/src/gzip/ftgzip.c
-  freetype/src/lzw/ftlzw.c
-  freetype/src/pcf/pcf.c
-  freetype/src/pfr/pfr.c
-  freetype/src/psaux/psaux.c
-  freetype/src/pshinter/pshinter.c
-  freetype/src/psnames/psnames.c
-  freetype/src/raster/raster.c
-  freetype/src/sdf/sdf.c
-  freetype/src/sfnt/sfnt.c
-  freetype/src/smooth/smooth.c
-  freetype/src/svg/svg.c
-  freetype/src/truetype/truetype.c
-  freetype/src/type1/type1.c
-  freetype/src/type42/type42.c
-  freetype/src/winfonts/winfnt.c
-  freetype/src/base/ftsystem.c
-  freetype/src/base/ftdebug.c
-)
-
-target_include_directories(freetype PUBLIC
-  ${CMAKE_CURRENT_SOURCE_DIR}/freetype/include
-  )
-
-target_compile_definitions(freetype PRIVATE
-  FT2_BUILD_LIBRARY=1
-  FT_CONFIG_OPTION_ERROR_STRINGS=1
-  )
