--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,9 +52,15 @@ target_compile_definitions(pico_color_picker PRIVATE
   WS2812_PIXEL_COUNT=3
   WS2813B_PIXEL_COUNT=14
   ROTARY_ENCODER_PIO=1
-  ROTARY_ENCODER_RED_SM=0
-  ROTARY_ENCODER_RED_A_PIN=15
-  ROTARY_ENCODER_RED_B_PIN=14
+  ROTARY_ENCODER_DIVISOR=4
+  ROTARY_ENCODER_RED_LOW_PIN=14
+  ROTARY_ENCODER_RED_INVERTED=false
+  ROTARY_ENCODER_GREEN_LOW_PIN=16
+  ROTARY_ENCODER_GREEN_INVERTED=true
+  ROTARY_ENCODER_BLUE_LOW_PIN=20
+  ROTARY_ENCODER_BLUE_INVERTED=false
+  BUTTON1_PIN=6
+  BUTTON2_PIN=7
   )
 
 target_include_directories(pico_color_picker PUBLIC
