Optimize FreeType build somewhat.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(src)
 add_subdirectory(IBM-Plex-Mono)
+#add_subdirectory(freetype)
 include(pico_freetype.cmake)
 
 file(COPY .gdbinit DESTINATION .)
