FreeRTOS is working!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,10 +18,15 @@
 
 cmake_minimum_required(VERSION 3.13)
 
+#
+#  Include the PICO SDK (out of tree) and FreeRTOS kernal (submodule)
+#
 include(${CMAKE_SOURCE_DIR}/pico_sdk_import.cmake)
 include(${CMAKE_SOURCE_DIR}/pico_extras_import.cmake)
-project(pico_piano C CXX ASM)
+set(FREERTOS_KERNEL_PATH ${CMAKE_SOURCE_DIR}/FreeRTOS-Kernel)
+include(${CMAKE_SOURCE_DIR}/FreeRTOS_Kernel_import.cmake)
 
+project(pico_piano C CXX ASM)
 pico_sdk_init()
 
 set(CMAKE_C_STANDARD 11)
@@ -30,7 +35,9 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(src)
 add_subdirectory(IBM-Plex-Mono)
-#add_subdirectory(freetype)
+
+#  Custom build of freetype library
 include(pico_freetype.cmake)
 
+#  Some gdb customization to be used from within the build directory
 file(COPY .gdbinit DESTINATION .)
