Label on RGB Encoder screen.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,12 +54,16 @@ endif()
 #
 #  Compile-time configuration of the fonts to be used.
 #
+
+#  TODO:  These names are confusing -- probably should just be P08 P16 P24_FONT ...
 set(SINGLE_LINE_TEXT_FONT spleen_12x24)
+set(DOUBLE_LINE_TEXT_FONT spleen_8x16)
 set(TRIPLE_LINE_TEXT_FONT spleen_5x8)
 set(RE_LABEL_FONT spleen_5x8)
 set(BUTTON_LABEL_FONT Dina_r400_8)
 set(FONTS
   ${SINGLE_LINE_TEXT_FONT}
+  ${DOUBLE_LINE_TEXT_FONT}
   ${TRIPLE_LINE_TEXT_FONT}
   ${RE_LABEL_FONT}
   ${BUTTON_LABEL_FONT})
@@ -80,6 +84,7 @@ message(STATUS "Font X Macros: ${FONT_XMACROS}")
 set(FONT_DEFINES
   PICKER_FONTS=${FONT_XMACROS}
   SINGLE_LINE_TEXT_FONT=${SINGLE_LINE_TEXT_FONT}
+  DOUBLE_LINE_TEXT_FONT=${DOUBLE_LINE_TEXT_FONT}
   TRIPLE_LINE_TEXT_FONT=${TRIPLE_LINE_TEXT_FONT}
   RE_LABEL_FONT=${RE_LABEL_FONT}
   BUTTON_LABEL_FONT=${BUTTON_LABEL_FONT})
