Reduce malloc dependency

--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -81,15 +81,15 @@ sp_while_paren_open             = true   # ignore/add/remove/force
 
 # Add or remove space around non-assignment symbolic operators ('+', '/', '%',
 # '<<', and so forth).
-sp_arith                        = ignore   # ignore/add/remove/force
+sp_arith                        = force   # ignore/add/remove/force
 
 # Add or remove space around arithmetic operators '+' and '-'.
 #
 # Overrides sp_arith.
-sp_arith_additive               = add   # ignore/add/remove/force
+sp_arith_additive               = force   # ignore/add/remove/force
 
 # Add or remove space around assignment operator '=', '+=', etc.
-sp_assign                       = ignore   # ignore/add/remove/force
+sp_assign                       = force   # ignore/add/remove/force
 
 # Add or remove space around '=' in C++11 lambda capture specifications.
 #
@@ -166,7 +166,7 @@ sp_bool                         = ignore   # ignore/add/remove/force
 sp_compare                      = ignore   # ignore/add/remove/force
 
 # Add or remove space inside '(' and ')'.
-sp_inside_paren                 = remove   # ignore/add/remove/force
+sp_inside_paren                 = add   # ignore/add/remove/force
 
 # Add or remove space between nested parentheses, i.e. '((' vs. ') )'.
 sp_paren_paren                  = ignore   # ignore/add/remove/force
@@ -184,19 +184,19 @@ sp_paren_brace                  = add   # ignore/add/remove/force
 sp_brace_brace                  = ignore   # ignore/add/remove/force
 
 # Add or remove space before pointer star '*'.
-sp_before_ptr_star              = ignore   # ignore/add/remove/force
+sp_before_ptr_star              = force   # ignore/add/remove/force
 
 # Add or remove space before pointer star '*' that isn't followed by a
 # variable name. If set to ignore, sp_before_ptr_star is used instead.
 sp_before_unnamed_ptr_star      = ignore   # ignore/add/remove/force
 
 # Add or remove space between pointer stars '*'.
-sp_between_ptr_star             = ignore   # ignore/add/remove/force
+sp_between_ptr_star             = remove   # ignore/add/remove/force
 
 # Add or remove space after pointer star '*', if followed by a word.
 #
 # Overrides sp_type_func.
-sp_after_ptr_star               = ignore   # ignore/add/remove/force
+sp_after_ptr_star               = remove   # ignore/add/remove/force
 
 # Add or remove space after pointer caret '^', if followed by a word.
 sp_after_ptr_block_caret        = ignore   # ignore/add/remove/force
@@ -212,7 +212,7 @@ sp_after_ptr_star_func          = ignore   # ignore/add/remove/force
 
 # Add or remove space after a pointer star '*', if followed by an open
 # parenthesis, as in 'void* (*)().
-sp_ptr_star_paren               = ignore   # ignore/add/remove/force
+sp_ptr_star_paren               = add   # ignore/add/remove/force
 
 # Add or remove space before a pointer star '*', if followed by a function
 # prototype or function definition.
@@ -1984,15 +1984,15 @@ nl_create_list_one_liner        = false    # true/false
 
 # Whether to split one-line simple unbraced if statements into two lines by
 # adding a newline, as in 'if(b) <here> i++;'.
-nl_split_if_one_liner           = false    # true/false
+nl_split_if_one_liner           = true    # true/false
 
 # Whether to split one-line simple unbraced for statements into two lines by
 # adding a newline, as in 'for (...) <here> stmt;'.
-nl_split_for_one_liner          = false    # true/false
+nl_split_for_one_liner          = true    # true/false
 
 # Whether to split one-line simple unbraced while statements into two lines by
 # adding a newline, as in 'while (expr) <here> stmt;'.
-nl_split_while_one_liner        = false    # true/false
+nl_split_while_one_liner        = true    # true/false
 
 # Don't add a newline before a cpp-comment in a parameter list of a function
 # call.
@@ -2186,10 +2186,10 @@ nl_between_get_set              = 0        # unsigned number
 nl_property_brace               = ignore   # ignore/add/remove/force
 
 # Whether to remove blank lines after '{'.
-eat_blanks_after_open_brace     = false    # true/false
+eat_blanks_after_open_brace     = true    # true/false
 
 # Whether to remove blank lines before '}'.
-eat_blanks_before_close_brace   = false    # true/false
+eat_blanks_before_close_brace   = true    # true/false
 
 # How aggressively to remove extra newlines not in preprocessor.
 #
@@ -2276,7 +2276,7 @@ pos_shift                       = ignore   # ignore/break/force/lead/trail/join/
 #
 
 # Try to limit code width to N columns.
-code_width                      = 80        # unsigned number
+code_width                      = 100        # unsigned number
 
 # Whether to fully split long 'for' statements at semi-colons.
 ls_for_split_full               = true    # true/false
@@ -2288,7 +2288,7 @@ ls_func_split_full              = true    # true/false
 # Whether to split lines as close to code_width as possible and ignore some
 # groupings.
 # The option ls_code_width has priority over the option ls_func_split_full.
-ls_code_width                   = true    # true/false
+ls_code_width                   = false    # true/false
 
 #
 # Code alignment options (not left column spaces/tabs)
@@ -2754,12 +2754,12 @@ mod_full_brace_if               = force   # ignore/add/remove/force
 # blocks.
 #
 # Overrides mod_full_brace_if.
-mod_full_brace_if_chain         = true    # true/false
+mod_full_brace_if_chain         = false    # true/false
 
 # Whether to add braces to all blocks of an 'if'/'else if'/'else' chain.
 # If true, mod_full_brace_if_chain will only remove braces from an 'if' that
 # does not have an 'else if' or 'else'.
-mod_full_brace_if_chain_only    = true    # true/false
+mod_full_brace_if_chain_only    = false    # true/false
 
 # Add or remove braces on single-line 'while' statement.
 mod_full_brace_while            = true   # ignore/add/remove/force
