--- a/.lvimrc
+++ b/.lvimrc
@@ -8,3 +8,6 @@ let g:ale_fixers = {
 let g:ale_c_uncrustify_options = '-c '
       \ . expand('<sfile>:h')
       \ . '/.uncrustify.cfg'
+
+set textwidth=100
+set colorcolumn=+1
