The chord menu works!

--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -160,7 +160,7 @@ sp_pp_stringify                 = ignore   # ignore/add/remove/force
 sp_before_pp_stringify          = ignore   # ignore/add/remove/force
 
 # Add or remove space around boolean operators '&&' and '||'.
-sp_bool                         = ignore   # ignore/add/remove/force
+sp_bool                         = force   # ignore/add/remove/force
 
 # Add or remove space around compare operator '<', '>', '==', etc.
 sp_compare                      = ignore   # ignore/add/remove/force
@@ -1565,7 +1565,7 @@ nl_synchronized_brace           = ignore   # ignore/add/remove/force
 #
 # Overrides nl_for_brace, nl_if_brace, nl_switch_brace, nl_while_switch and
 # nl_catch_brace.
-nl_multi_line_cond              = false    # true/false
+nl_multi_line_cond              = true    # true/false
 
 # Add a newline after '(' if an if/for/while/switch condition spans multiple
 # lines
