--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -61,12 +61,14 @@ set(DOUBLE_LINE_TEXT_FONT spleen_8x16)
 set(TRIPLE_LINE_TEXT_FONT spleen_5x8)
 set(RE_LABEL_FONT spleen_5x8)
 set(BUTTON_LABEL_FONT Dina_r400_8)
+set(P10_FONT Dina_r400_6)
 set(FONTS
   ${SINGLE_LINE_TEXT_FONT}
   ${DOUBLE_LINE_TEXT_FONT}
   ${TRIPLE_LINE_TEXT_FONT}
   ${RE_LABEL_FONT}
-  ${BUTTON_LABEL_FONT})
+  ${BUTTON_LABEL_FONT}
+  ${P10_FONT})
 list(REMOVE_DUPLICATES FONTS)
 message(STATUS "Fonts: ${FONTS}")
 
@@ -87,7 +89,8 @@ set(FONT_DEFINES
   DOUBLE_LINE_TEXT_FONT=${DOUBLE_LINE_TEXT_FONT}
   TRIPLE_LINE_TEXT_FONT=${TRIPLE_LINE_TEXT_FONT}
   RE_LABEL_FONT=${RE_LABEL_FONT}
-  BUTTON_LABEL_FONT=${BUTTON_LABEL_FONT})
+  BUTTON_LABEL_FONT=${BUTTON_LABEL_FONT}
+  P10_FONT=${P10_FONT})
 
 # --------------------------------------------------------------------------------
 
