Add a main menu.

--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -169,7 +169,7 @@ sp_compare                      = ignore   # ignore/add/remove/force
 sp_inside_paren                 = add   # ignore/add/remove/force
 
 # Add or remove space between nested parentheses, i.e. '((' vs. ') )'.
-sp_paren_paren                  = ignore   # ignore/add/remove/force
+sp_paren_paren                  = add   # ignore/add/remove/force
 
 # Add or remove space between back-to-back parentheses, i.e. ')(' vs. ') ('.
 sp_cparen_oparen                = ignore   # ignore/add/remove/force
