--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -542,7 +542,7 @@ sp_func_def_paren_empty         = ignore   # ignore/add/remove/force
 sp_inside_fparens               = remove   # ignore/add/remove/force
 
 # Add or remove space inside function '(' and ')'.
-sp_inside_fparen                = remove   # ignore/add/remove/force
+sp_inside_fparen                = add   # ignore/add/remove/force
 
 # Add or remove space inside the first parentheses in a function type, as in
 # 'void (*x)(...)'.
@@ -1362,7 +1362,7 @@ donot_indent_func_def_close_paren = false    # true/false
 
 # Whether to collapse empty blocks between '{' and '}'.
 # If true, overrides nl_inside_empty_func
-nl_collapse_empty_body          = false    # true/false
+nl_collapse_empty_body          = true    # true/false
 
 # Don't split one-line braced assignments, as in 'foo_t f = { 1, 2 };'.
 nl_assign_leave_one_liners      = false    # true/false
@@ -1434,7 +1434,7 @@ nl_end_of_file                  = ignore   # ignore/add/remove/force
 nl_end_of_file_min              = 0        # unsigned number
 
 # Add or remove newline between '=' and '{'.
-nl_assign_brace                 = ignore   # ignore/add/remove/force
+nl_assign_brace                 = force   # ignore/add/remove/force
 
 # (D) Add or remove newline between '=' and '['.
 nl_assign_square                = ignore   # ignore/add/remove/force
@@ -1565,7 +1565,7 @@ nl_synchronized_brace           = ignore   # ignore/add/remove/force
 #
 # Overrides nl_for_brace, nl_if_brace, nl_switch_brace, nl_while_switch and
 # nl_catch_brace.
-nl_multi_line_cond              = true    # true/false
+nl_multi_line_cond              = ignore    # true/false
 
 # Add a newline after '(' if an if/for/while/switch condition spans multiple
 # lines
@@ -1573,7 +1573,7 @@ nl_multi_line_sparen_open       = ignore   # ignore/add/remove/force
 
 # Add a newline before ')' if an if/for/while/switch condition spans multiple
 # lines. Overrides nl_before_if_closing_paren if both are specified.
-nl_multi_line_sparen_close      = ignore   # ignore/add/remove/force
+nl_multi_line_sparen_close      = true   # ignore/add/remove/force
 
 # Force a newline in a define after the macro name for multi-line defines.
 nl_multi_line_define            = false    # true/false
@@ -1795,7 +1795,7 @@ nl_func_call_args_multi_line    = false    # true/false
 
 # Whether to add a newline before ')' in a function call if '(' and ')' are in
 # different lines.
-nl_func_call_end_multi_line     = true    # true/false
+nl_func_call_end_multi_line     = false    # true/false
 
 # Whether to respect nl_func_call_XXX option incase of closure args.
 nl_func_call_args_multi_line_ignore_closures = false    # true/false
@@ -1847,7 +1847,7 @@ nl_type_brace_init_lst_close    = ignore   # ignore/add/remove/force
 
 # Whether to add a newline after '{'. This also adds a newline before the
 # matching '}'.
-nl_after_brace_open             = false    # true/false
+nl_after_brace_open             = true    # true/false
 
 # Whether to add a newline between the open brace and a trailing single-line
 # comment. Requires nl_after_brace_open=true.
@@ -2500,26 +2500,26 @@ align_typedef_amp_style         = 0        # unsigned number
 # The span for aligning comments that end lines.
 #
 # 0: Don't align (default).
-align_right_cmt_span            = 0        # unsigned number
+align_right_cmt_span            = 2        # unsigned number
 
 # Minimum number of columns between preceding text and a trailing comment in
 # order for the comment to qualify for being aligned. Must be non-zero to have
 # an effect.
-align_right_cmt_gap             = 0        # unsigned number
+align_right_cmt_gap             = 2        # unsigned number
 
 # If aligning comments, whether to mix with comments after '}' and #endif with
 # less than three spaces before the comment.
 align_right_cmt_mix             = false    # true/false
 
 # Whether to only align trailing comments that are at the same brace level.
-align_right_cmt_same_level      = false    # true/false
+align_right_cmt_same_level      = true    # true/false
 
 # Minimum column at which to align trailing comments. Comments which are
 # aligned beyond this column, but which can be aligned in a lesser column,
 # may be "pulled in".
 #
 # 0: Ignore (default).
-align_right_cmt_at_col          = 0        # unsigned number
+align_right_cmt_at_col          = 0       # unsigned number
 
 # The span for aligning function prototypes.
 #
@@ -2611,7 +2611,7 @@ align_oc_msg_colon_xcode_like   = false    # true/false
 #
 
 # Try to wrap comments at N columns.
-cmt_width                       = 0        # unsigned number
+cmt_width                       = 100        # unsigned number
 
 # How to reflow comments.
 #
@@ -2622,7 +2622,7 @@ cmt_reflow_mode                 = 0        # unsigned number
 
 # Whether to convert all tabs to spaces in comments. If false, tabs in
 # comments are left alone, unless used for indenting.
-cmt_convert_tab_to_spaces       = false    # true/false
+cmt_convert_tab_to_spaces       = true    # true/false
 
 # Whether to apply changes to multi-line comments, including cmt_width,
 # keyword substitution and leading chars.
@@ -2631,41 +2631,41 @@ cmt_convert_tab_to_spaces       = false    # true/false
 cmt_indent_multi                = true     # true/false
 
 # Whether to group c-comments that look like they are in a block.
-cmt_c_group                     = false    # true/false
+cmt_c_group                     = true    # true/false
 
 # Whether to put an empty '/*' on the first line of the combined c-comment.
-cmt_c_nl_start                  = false    # true/false
+cmt_c_nl_start                  = true    # true/false
 
 # Whether to add a newline before the closing '*/' of the combined c-comment.
-cmt_c_nl_end                    = false    # true/false
+cmt_c_nl_end                    = true    # true/false
 
 # Whether to change cpp-comments into c-comments.
-cmt_cpp_to_c                    = false    # true/false
+cmt_cpp_to_c                    = true    # true/false
 
 # Whether to group cpp-comments that look like they are in a block. Only
 # meaningful if cmt_cpp_to_c=true.
-cmt_cpp_group                   = false    # true/false
+cmt_cpp_group                   = true    # true/false
 
 # Whether to put an empty '/*' on the first line of the combined cpp-comment
 # when converting to a c-comment.
 #
 # Requires cmt_cpp_to_c=true and cmt_cpp_group=true.
-cmt_cpp_nl_start                = false    # true/false
+cmt_cpp_nl_start                = true    # true/false
 
 # Whether to add a newline before the closing '*/' of the combined cpp-comment
 # when converting to a c-comment.
 #
 # Requires cmt_cpp_to_c=true and cmt_cpp_group=true.
-cmt_cpp_nl_end                  = false    # true/false
+cmt_cpp_nl_end                  = true    # true/false
 
 # Whether to put a star on subsequent comment lines.
-cmt_star_cont                   = false    # true/false
+cmt_star_cont                   = true    # true/false
 
 # The number of spaces to insert at the start of subsequent comment lines.
 cmt_sp_before_star_cont         = 0        # unsigned number
 
 # The number of spaces to insert after the star on subsequent comment lines.
-cmt_sp_after_star_cont          = 0        # unsigned number
+cmt_sp_after_star_cont          = 2        # unsigned number
 
 # For multi-line comments with a '*' lead, remove leading spaces if the first
 # and last lines of the comment are the same length.
